# WeatherApp

./: CMakeLists.txt  README.md
docs/: architecture.md
include/: httpclient.h  weatherapi.h  weatherdata.h
src/: httpclient.cpp  main.cpp  weatherapi.cpp  weatherdata.cpp
